--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="format-detection" content="telephone=no">
-  <title></title>
+  <title>深度教育-文档中心</title>
+  <script type="text/javascript">
+    // 路由访问根路径
+    window.routerRoot = '/apidocs';
+  </script>
 </head>
 <body>
   <noscript>
