--- a/server/public/index.html
+++ b/server/public/index.html
@@ -8,7 +8,7 @@
   <title>深度教育-文档中心</title>
   <script type="text/javascript">
     // 路由访问根路径
-    window.routerRoot = "/apidocs";
+    window.routerRoot = "";
   </script>
 <style type="text/css">dd,dl,p{margin:0}ol,ul{list-style-type:none}h1,h2,h3,h4,h5,h6{margin:0;font-size:inherit;font-weight:400}html{font-size:100px;-webkit-tap-highlight-color:transparent}body{margin:0;color:#333;font:14px/1.2 Microsoft Yahei,Consolas,sans-serif,arial,SimSun,tahoma,Srial,helvetica}::-webkit-scrollbar{width:14px}::-webkit-scrollbar-track{background-color:#f3f3f3}::-webkit-scrollbar-thumb{background-color:#f3f3f3;border:1px solid silver}::-webkit-scrollbar-thumb:hover{background-color:#f3f3e0}
 .leftBox_7rPVA{position:relative;z-index:1}.bar_2bQLH{position:absolute;right:-2px;top:0;width:10px;height:100%;cursor:e-resize}
