--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <title>深度教育-文档中心</title>
   <script type="text/javascript">
     // 路由访问根路径
-    window.routerRoot = '/apidocs';
+    window.routerRoot = '';
   </script>
 </head>
 <body>
